pipe custom examples and additions to built in pipes

--- a/src/app/components/built-in-pipes/built-in-pipes.component.html
+++ b/src/app/components/built-in-pipes/built-in-pipes.component.html
@@ -37,4 +37,8 @@
 {{exampleObject | json}}
 
 <h3>Observables through pipe</h3>
+<!--...-->
 
+<h3>Exercise 1</h3>
+{{dateAmount.date | date:"yyyyMMdd"}} <br>
+{{dateAmount.amount | currency:"EUR"}}
