--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<app-built-in-pipes></app-built-in-pipes>
+<!--<h3>Built-in pipes</h3>
+<app-built-in-pipes></app-built-in-pipes>-->
+
+
+<h3>Custom pipes</h3>
+<app-custom-pipes></app-custom-pipes>
